--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
-    "firebase": "^9.19.1"
+    "firebase": "^9.19.1",
+    "uuid": "^9.0.0"
   }
 }
